--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -27,5 +27,12 @@
 	    android:layout_height="wrap_content"
 	    android:text="Statistik"
 	    android:layout_marginTop="20dp" />
+	
+	<Button
+	    android:id="@+id/btn_get_info_sppt"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:text="Info SPPT"
+	    android:layout_marginTop="20dp" />
 
 </LinearLayout>
