--- a/res/layout/activity_parameter_sppt.xml
+++ b/res/layout/activity_parameter_sppt.xml
@@ -27,7 +27,7 @@
         android:text="Tahun Pajak" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/ed_thn_pajak"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
